--- a/Includes/Bibliography/_ref_1990s.bib
+++ b/Includes/Bibliography/_ref_1990s.bib
@@ -324,3 +324,12 @@
   year={1991},
   publisher={Elsevier}
 }
+
+@incollection{frenklach1994detailed,
+ title={Detailed mechanism and modeling of soot particle formation},
+ author={Frenklach, Michael and Wang, Hai},
+ booktitle={Soot formation in combustion: mechanisms and models},
+ pages={165--192},
+ year={1994},
+ publisher={Springer}
+}
