--- a/Includes/Bibliography/_ref_2011.bib
+++ b/Includes/Bibliography/_ref_2011.bib
@@ -82,3 +82,14 @@
   year={2011},
   publisher={Springer}
 }
+
+@article{dworkin2011application,
+ title={Application of an enhanced PAH growth model to soot formation in a laminar coflow ethylene/air diffusion flame},
+ author={Dworkin, Seth B and Zhang, Qingan and Thomson, Murray J and Slavinskaya, Nadezhda A and Riedel, Uwe},
+ journal={Combustion and Flame},
+ volume={158},
+ number={9},
+ pages={1682--1695},
+ year={2011},
+ publisher={Elsevier}
+}
