--- a/Includes/Bibliography/_ref_2013.bib
+++ b/Includes/Bibliography/_ref_2013.bib
@@ -59,3 +59,15 @@
   year={2013},
   publisher={Springer}
 }
+
+
+@article{cuoci2013computational,
+ title={A computational tool for the detailed kinetic modeling of laminar flames: Application to C2H4/CH4 coflow flames},
+ author={Cuoci, Alberto and Frassoldati, Alessio and Faravelli, Tiziano and Ranzi, Eliseo},
+ journal={Combustion and Flame},
+ volume={160},
+ number={5},
+ pages={870--886},
+ year={2013},
+ publisher={Elsevier}
+}
