--- a/Includes/Bibliography/_ref_2015.bib
+++ b/Includes/Bibliography/_ref_2015.bib
@@ -154,3 +154,24 @@
   year={2015},
   publisher={Springer}
 }
+
+@article{cuoci2015opensmoke++,
+ title={OpenSMOKE++: An object-oriented framework for the numerical modeling of reactive systems with detailed kinetic mechanisms},
+ author={Cuoci, Alberto and Frassoldati, Alessio and Faravelli, Tiziano and Ranzi, Eliseo},
+ journal={Computer Physics Communications},
+ volume={192},
+ pages={237--264},
+ year={2015},
+ publisher={Elsevier}
+}
+
+@article{liu2015numerical,
+ title={Numerical and experimental study of the influence of CO2 and N2 dilution on soot formation in laminar coflow C2H4/air diffusion flames at pressures between 5 and 20 atm},
+ author={Liu, Fengshan and Karata{\c{s}}, Ahmet E and G{\"u}lder, {\"O}mer L and Gu, Mingyan},
+ journal={Combustion and Flame},
+ volume={162},
+ number={5},
+ pages={2231--2247},
+ year={2015},
+ publisher={Elsevier}
+}
