--- a/Includes/Bibliography/_ref_2016.bib
+++ b/Includes/Bibliography/_ref_2016.bib
@@ -79,3 +79,13 @@
   year={2016},
   publisher={Elsevier}
 }
+
+@article{eaves2016coflame,
+ title={CoFlame: A refined and validated numerical algorithm for modeling sooting laminar coflow diffusion flames},
+ author={Eaves, Nick A and Zhang, Qingan and Liu, Fengshan and Guo, Hongsheng and Dworkin, Seth B and Thomson, Murray J},
+ journal={Computer Physics Communications},
+ volume={207},
+ pages={464--477},
+ year={2016},
+ publisher={Elsevier}
+}
