--- a/Includes/Bibliography/_ref_2019.bib
+++ b/Includes/Bibliography/_ref_2019.bib
@@ -10,16 +10,16 @@
   publisher={Elsevier}
 }
 
-@article{Kelesidis2019,
-   author = {Georgios A Kelesidis and Sotiris E Pratsinis},
-   issn = {0010-2180},
-   journal = {Combust. Flame},
-   pages = {493-499},
-   publisher = {Elsevier},
-   title = {Estimating the internal and surface oxidation of soot agglomerates},
-   volume = {209},
-   year = {2019},
-}
+% @article{Kelesidis2019,
+%    author = {Georgios A Kelesidis and Sotiris E Pratsinis},
+%    issn = {0010-2180},
+%    journal = {Combust. Flame},
+%    pages = {493-499},
+%    publisher = {Elsevier},
+%    title = {Estimating the internal and surface oxidation of soot agglomerates},
+%    volume = {209},
+%    year = {2019},
+% }
 
 @article{integrated2019,
 	author = {U.S. EPA.},
@@ -126,4 +126,15 @@
   pages={148--159},
   year={2019},
   publisher={Elsevier}
+}
+
+@article{martin2019reactivity,
+  title={Reactivity of polycyclic aromatic hydrocarbon soot precursors: implications of localized $\pi$-radicals on rim-based pentagonal rings},
+  author={Martin, Jacob W and Hou, Dingyu and Menon, Angiras and Pascazio, Laura and Akroyd, Jethro and You, Xiaoqing and Kraft, Markus},
+  journal={The Journal of Physical Chemistry C},
+  volume={123},
+  number={43},
+  pages={26673--26682},
+  year={2019},
+  publisher={ACS Publications}
 }
