--- a/Includes/Bibliography/_ref_2022.bib
+++ b/Includes/Bibliography/_ref_2022.bib
@@ -48,3 +48,13 @@
   year={2022},
   publisher={Elsevier}
 }
+
+@article{nobili2022modeling,
+ title={Modeling soot particles as stable radicals: a chemical kinetic study on formation and oxidation. Part II. Soot oxidation in flow reactors and laminar flames},
+ author={Nobili, Andrea and Pejpichestakul, Warumporn and Pelucchi, Matteo and Cuoci, Alberto and Cavallotti, Carlo and Faravelli, Tiziano},
+ journal={Combustion and Flame},
+ volume={243},
+ pages={112072},
+ year={2022},
+ publisher={Elsevier}
+}
