--- a/Includes/Bibliography/_ref_2023.bib
+++ b/Includes/Bibliography/_ref_2023.bib
@@ -39,3 +39,13 @@
   year={2023},
   publisher={Elsevier}
 }
+
+@article{zhu2023wide,
+  title={A wide range experimental study and further development of a kinetic model describing propane oxidation},
+  author={Zhu, Long and Panigrahy, Snehasish and Elliott, Sarah N and Klippenstein, Stephen J and Baigmohammadi, Mohammadreza and Mohamed, A Abd El-Sabor and Hargis, Joshua W and Alturaifi, Sulaiman and Mathieu, Olivier and Petersen, Eric L and others},
+  journal={Combustion and Flame},
+  volume={248},
+  pages={112562},
+  year={2023},
+  publisher={Elsevier}
+}
