--- a/Includes/Bibliography/all.bib
+++ b/Includes/Bibliography/all.bib
@@ -680,6 +680,16 @@
   year={1991},
   publisher={Elsevier}
 }
+
+@incollection{frenklach1994detailed,
+ title={Detailed mechanism and modeling of soot particle formation},
+ author={Frenklach, Michael and Wang, Hai},
+ booktitle={Soot formation in combustion: mechanisms and models},
+ pages={165--192},
+ year={1994},
+ publisher={Springer}
+}
+
 @article{appel2000kinetic,
   title={Kinetic modeling of soot formation with detailed chemistry and physics: laminar premixed flames of C2 hydrocarbons},
   author={Appel, J{\"o}rg and Bockhorn, Henning and Frenklach, Michael},
@@ -1293,6 +1303,17 @@
   year={2011},
   publisher={Springer}
 }
+
+@article{dworkin2011application,
+ title={Application of an enhanced PAH growth model to soot formation in a laminar coflow ethylene/air diffusion flame},
+ author={Dworkin, Seth B and Zhang, Qingan and Thomson, Murray J and Slavinskaya, Nadezhda A and Riedel, Uwe},
+ journal={Combustion and Flame},
+ volume={158},
+ number={9},
+ pages={1682--1695},
+ year={2011},
+ publisher={Elsevier}
+}
 @article{buesser2012design,
   title={Design of nanomaterial synthesis by aerosol processes},
   author={Buesser, Beat and Pratsinis, Sotiris E},
@@ -1396,6 +1417,17 @@
   publisher={Springer}
 }
 
+
+@article{cuoci2013computational,
+ title={A computational tool for the detailed kinetic modeling of laminar flames: Application to C2H4/CH4 coflow flames},
+ author={Cuoci, Alberto and Frassoldati, Alessio and Faravelli, Tiziano and Ranzi, Eliseo},
+ journal={Combustion and Flame},
+ volume={160},
+ number={5},
+ pages={870--886},
+ year={2013},
+ publisher={Elsevier}
+}
 @article{myhre2014anthropogenic,
   title={Anthropogenic and natural radiative forcing},
   author={Myhre, Gunnar and Shindell, Drew and Pongratz, Julia},
@@ -1589,6 +1621,27 @@
   year={2015},
   publisher={Springer}
 }
+
+@article{cuoci2015opensmoke++,
+ title={OpenSMOKE++: An object-oriented framework for the numerical modeling of reactive systems with detailed kinetic mechanisms},
+ author={Cuoci, Alberto and Frassoldati, Alessio and Faravelli, Tiziano and Ranzi, Eliseo},
+ journal={Computer Physics Communications},
+ volume={192},
+ pages={237--264},
+ year={2015},
+ publisher={Elsevier}
+}
+
+@article{liu2015numerical,
+ title={Numerical and experimental study of the influence of CO2 and N2 dilution on soot formation in laminar coflow C2H4/air diffusion flames at pressures between 5 and 20 atm},
+ author={Liu, Fengshan and Karata{\c{s}}, Ahmet E and G{\"u}lder, {\"O}mer L and Gu, Mingyan},
+ journal={Combustion and Flame},
+ volume={162},
+ number={5},
+ pages={2231--2247},
+ year={2015},
+ publisher={Elsevier}
+}
 @article{kholghy2016core,
   title={The core--shell internal nanostructure of soot--A criterion to model soot maturity},
   author={Kholghy, Mohammad Reza and Veshkini, Armin and Thomson, Murray John},
@@ -1669,6 +1722,16 @@
   pages={218--224},
   year={2016},
   publisher={Elsevier}
+}
+
+@article{eaves2016coflame,
+ title={CoFlame: A refined and validated numerical algorithm for modeling sooting laminar coflow diffusion flames},
+ author={Eaves, Nick A and Zhang, Qingan and Liu, Fengshan and Guo, Hongsheng and Dworkin, Seth B and Thomson, Murray J},
+ journal={Computer Physics Communications},
+ volume={207},
+ pages={464--477},
+ year={2016},
+ publisher={Elsevier}
 }
 @web_page{international2017,
    title = {International Carbon Black Association, Carbon black user’s guide},
@@ -1919,16 +1982,16 @@
   publisher={Elsevier}
 }
 
-@article{Kelesidis2019,
-   author = {Georgios A Kelesidis and Sotiris E Pratsinis},
-   issn = {0010-2180},
-   journal = {Combust. Flame},
-   pages = {493-499},
-   publisher = {Elsevier},
-   title = {Estimating the internal and surface oxidation of soot agglomerates},
-   volume = {209},
-   year = {2019},
-}
+% @article{Kelesidis2019,
+%    author = {Georgios A Kelesidis and Sotiris E Pratsinis},
+%    issn = {0010-2180},
+%    journal = {Combust. Flame},
+%    pages = {493-499},
+%    publisher = {Elsevier},
+%    title = {Estimating the internal and surface oxidation of soot agglomerates},
+%    volume = {209},
+%    year = {2019},
+% }
 
 @article{integrated2019,
 	author = {U.S. EPA.},
@@ -2035,6 +2098,17 @@
   pages={148--159},
   year={2019},
   publisher={Elsevier}
+}
+
+@article{martin2019reactivity,
+  title={Reactivity of polycyclic aromatic hydrocarbon soot precursors: implications of localized $\pi$-radicals on rim-based pentagonal rings},
+  author={Martin, Jacob W and Hou, Dingyu and Menon, Angiras and Pascazio, Laura and Akroyd, Jethro and You, Xiaoqing and Kraft, Markus},
+  journal={The Journal of Physical Chemistry C},
+  volume={123},
+  number={43},
+  pages={26673--26682},
+  year={2019},
+  publisher={ACS Publications}
 }
 @article{2020SciPy,
   author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
@@ -2311,6 +2385,16 @@
   year={2022},
   publisher={Elsevier}
 }
+
+@article{nobili2022modeling,
+ title={Modeling soot particles as stable radicals: a chemical kinetic study on formation and oxidation. Part II. Soot oxidation in flow reactors and laminar flames},
+ author={Nobili, Andrea and Pejpichestakul, Warumporn and Pelucchi, Matteo and Cuoci, Alberto and Cavallotti, Carlo and Faravelli, Tiziano},
+ journal={Combustion and Flame},
+ volume={243},
+ pages={112072},
+ year={2022},
+ publisher={Elsevier}
+}
 @misc{cantera,
     author = "David G. Goodwin and Harry K. Moffat and Ingmar Schoegl and Raymond L.
               Speth and Bryan W. Weber",
@@ -2350,6 +2434,26 @@
   volume={255},
   pages={112899},
   year={2023},
+  publisher={Elsevier}
+}
+
+@article{zhu2023wide,
+  title={A wide range experimental study and further development of a kinetic model describing propane oxidation},
+  author={Zhu, Long and Panigrahy, Snehasish and Elliott, Sarah N and Klippenstein, Stephen J and Baigmohammadi, Mohammadreza and Mohamed, A Abd El-Sabor and Hargis, Joshua W and Alturaifi, Sulaiman and Mathieu, Olivier and Petersen, Eric L and others},
+  journal={Combustion and Flame},
+  volume={248},
+  pages={112562},
+  year={2023},
+  publisher={Elsevier}
+}
+@article{hellmuth2024role,
+  title={The role of C3 and C4 species in forming naphthalene in counterflow diffusion flames},
+  author={Hellmuth, Maximilian and Langer, Raymond and Meraviglia, Anita and Beeckmann, Joachim and Pitsch, Heinz},
+  journal={Proceedings of the Combustion Institute},
+  volume={40},
+  number={1-4},
+  pages={105620},
+  year={2024},
   publisher={Elsevier}
 }
 @misc{HansonGroupShockTube,
