--- a/Includes/results/results.tex
+++ b/Includes/results/results.tex
@@ -1,4 +1,5 @@
 \section{Results and Discussion}
+\input{Includes/results/chemistry}
 \input{Includes/results/shocktube}
 \input{Includes/results/pfr}
 \input{Includes/results/psr}
