--- a/Includes/results/shocktube.tex
+++ b/Includes/results/shocktube.tex
@@ -1,5 +1,7 @@
 \subsection{Methane pyrolysis in shock-tube using constant pressure reactor}
-The pyrolysis of 5\% $\mathrm{CH_4}$-Ar was investigated using a constant pressure reactor model (CPR) for the post-shock temperature, $T_5$ range of 1800-3000 K, and pressure, $\mathrm{P_5}$ range of 4.7-7.1 bar. $P_5$ was not specified for each experiment (characterized with $\mathrm{T_5}$), so we assume that $\mathrm{P_5}$ linearly increases with $\mathrm{T_5}$ in the specified pressure range. Caltech mechanism was used to describe gas chemistry. The inception and PAH adsorption rates were adjusted using $\eta_{inc}$ and $\eta_{ads}$, respectively to match the predicted carbon yield at t=1.5 ms over the studied $\mathrm{T_5}$ and $\mathrm{P_5}$ with the extinction measurements at $\mathrm{\lambda}$=632~nm~\citep{agafonov2016unified}. The measured carbon yield was retrieved from the reported yield$\times$E(m) considering the maximum variability in the absorption function of soot from 0.174~\citep{lee1981optical} to 0.37~\citep{agafonov2011soot} in the literature. A parametric study was performed on the inception and adsorption adjustment factors using a grid search approach. Each factor was varied across 11 logarithmically spaced values ranging from $10^{-4}$ to 1, resulting in 99 simulation cases for each data point (792 simulations in total). The combinations of $\eta_{inc}$ and $\eta_{ads}$ were sorted using the average relative error all data points to find the combinations(s) of adjustment factors resulting in the minimum prediction error for carbon yield. Figure\ref{fig:shockagof_yielderror_cpr} shows a heat map of the mean relative error normalized by the maximum value for Reactive Dimerization. The largest error occurs for the combination of the maximum inception and minimum PAH adsorption corresponding to  $\eta_{inc}=1$ ($\mathrm{\log_{10}}(\eta_{inc})$ = 0) and $\eta_{ads}=-4$ ($\mathrm{\log_{10}}(\eta_{ads})$ = -4). The region with the lowest normalized error (less than 5\%) was outlined in blue, and it covers a large number of adjustment factor pairs that led to the accurate prediction of carbon yield, but might change the predicted morphology. To better understand these effect, we took a multi-step approach: i) the model was run without soot to focus on the chemistry of precursors and $\mathrm{C_2H_2}$, ii) the inception models were optimized using equal adjustment factors $\eta_{inc}$=$\eta_{ads}$ iii) the inception models were optimized with the minimum adsorption rate, $\eta_{ads}= 10^{-4}$ (labeled as \textit{Min Ads}) and the minimum inception flux, $\eta_{inc}= 10^{-4}$ (labeled as \textit{Min Ads}).
+The pyrolysis of 5\% $\mathrm{CH_4}$-Ar was investigated using a constant pressure reactor model (CPR) for the post-shock temperature, $\mathrm{T_5}$ range of 1800-3000 K, and pressure, $\mathrm{P_5}$ range of 4.7-7.1 bar. $P_5$ was not specified for each experiment (characterized with $\mathrm{T_5}$), so we assume that $\mathrm{P_5}$ linearly increases with $\mathrm{T_5}$ in the specified pressure range~\citep{agafonov2016unified}. Caltech mechanism was used to describe gas chemistry. The inception and PAH adsorption rates were adjusted using $\eta_{inc}$ and $\eta_{ads}$, respectively to match the predicted carbon yield at t=1.5 ms over the studied $\mathrm{T_5}$ and $\mathrm{P_5}$ with the light extinction measurements at $\mathrm{\lambda}$=632~nm~\citep{agafonov2016unified}. The measured carbon yield (CY) was retrieved from the reported CY$\times$E(m). There are uncertainties in the CY calculated using this technique due to the variability of E(m). It is common to use a E(m) of mature soot which might not be accurate for soot particles formed in shock-tube in short residence times ($\approx$ 2 ms), but the E(m) of soot increases significantly with particle size, composition and maturity. For example, E(m) changes from 0.05 to 0.25 as their primary particle diameter grows to 20 nm within 1.6 ms of acetylene pyrolysis in a shock tube. Having said that, there is still a large gap in the quantitative understanding evolving E(m) of soot. We considered the variability of E(m) from 0.174~\citep{lee1981optical} to 0.37~\citep{agafonov2011soot} in the literature. 
+
+A parametric study was performed on the inception and adsorption adjustment factors using a grid search approach. Each factor was varied across 11 logarithmically spaced values ranging from $10^{-4}$ to 1, resulting in 99 simulation cases for each data point (792 simulations in total). The combinations of $\eta_{inc}$ and $\eta_{ads}$ were sorted using the average relative error for all data points to find the combinations(s) of adjustment factors resulting in the minimum prediction error for carbon yield. Figure~\ref{fig:shockagof_yielderror_cpr} shows a heat map of the mean relative error normalized by the maximum value for Reactive Dimerization. The largest error occurs for the combination of the maximum inception and minimum PAH adsorption corresponding to  $\eta_{inc}=1$ ($\mathrm{\log_{10}}(\eta_{inc})$ = 0) and $\eta_{ads}=10^{-4}$ ($\mathrm{\log_{10}}(\eta_{ads})$ = -4). The region with the lowest normalized error (less than 5\%) was outlined in blue, and it covers a large number of adjustment factor pairs that led to the accurate prediction of carbon yield, but might change the predicted morphology. To better understand these effect, we took a multi-step approach: i) the model was run without soot to focus on the chemistry of precursors and $\mathrm{C_2H_2}$, ii) the inception models were optimized using equal adjustment factors $\eta_{inc}$=$\eta_{ads}$ iii) the inception models were optimized with the minimum adsorption rate, $\eta_{ads}= 10^{-4}$ (labeled as \textit{Min Ads}) and the minimum inception flux, $\eta_{inc}= 10^{-4}$ (labeled as \textit{Min Ads}).
 
 \begin{figure}[H]
 	\centering
@@ -11,7 +13,7 @@ The pyrolysis of 5\% $\mathrm{CH_4}$-Ar was investigated using a constant pressu
 
 %The model was run without soot (only the gas phase is simulated and no soot conversion allowed) to provide insight into the effect of temperature on the species involved in soot formation.
 
-Figure~\ref{fig:SPC_cmf_cpr}-a shows the carbon mass fraction (CMF) of soot precursors (individual PAHs and total) and $\mathrm{C_2H_2}$ at 1.5 ms over the studied temperature range when soot model is deactivated. While the precursors exhibit a bell-shape behavior, the CMF of $\mathrm{C_2H_2}$ linearly increases with temperature and level off after reaching 85\% $\mathrm{T_5\approx}$2400K. Among the considered PAHs, A2, A2R5, and A4R5 contain the majority of carbon and are expected to be major contributors to soot inception and surface growth via adsorption.
+Figure~\ref{fig:SPC_cmf_cpr}-a shows the carbon mass fraction (CMF) of soot precursors (individual PAHs and total) and $\mathrm{C_2H_2}$ at 1.5 ms over the studied temperature range when soot model is deactivated. While the precursors exhibit a bell-shape behavior, the CMF of $\mathrm{C_2H_2}$ linearly increases with temperature and levels off after reaching 85\% $\mathrm{T_5\approx}$2400K. Among the considered PAHs, A2, A2R5, and A4R5 contain the majority of carbon and are expected to be major contributors to soot inception and surface growth.
 
 \begin{figure}[H]
 	\centering
